[tool.poetry]
name = "limao"
version = "0.1.0"
description = ""
authors = ["Daniel O'Hanlon <dpohanlon@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
scikit-image = "^0.21.0"
bng-latlon = "^1.1"
rioxarray = "^0.14.1"
earthpy = "^0.9.4"
pysolar = "^0.11"
pandas = "^2.0.3"
tqdm = "^4.65.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
h5py = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
limao = "limao.run_limao:run"
